Fixed spacing issues in upload confirm page

--- a/app/assets/stylesheets/layout.css
+++ b/app/assets/stylesheets/layout.css
@@ -186,7 +186,8 @@ a{
 
 .footer {
   width: 100%;
-  height: -50px;
+  height: 50px;
+  margin: 0px;
   text-align: center;
   background: rgba(40,40,40,1);
 }
